--- a/.github/workflows/sp.yml
+++ b/.github/workflows/sp.yml
@@ -24,9 +24,11 @@ jobs:
         - name: checkout repo files
           run: ls
 
+        - name: upload artifact
+          uses: actions/upload-artifact@v3
+
         - name: download artifact
           uses: actions/download-artifact@v3
           with:
             name: dragon-file
-            path: dragon.txt
 
