--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,9 +5,17 @@ on:
     branches: [ main ]
 
 jobs:
-  login:
+  docker-login:
     runs-on: ubuntu-latest
     steps:
+    - name: Check variables are set
+      run: |
+        if [ -z "${{ vars.DOCKERHUB_USERNAME }}" ]; then
+          echo "ERROR: DOCKERHUB_USERNAME variable is not set!"
+          exit 1
+        fi
+        echo "Username is set: ${{ vars.DOCKERHUB_USERNAME }}"
+
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
